@@ -1,6 +1,7 @@
 version 0.9.0-rc0 - XX-Jan-2010
  . Actions: added 2 new instant actions: FlipX and FlipY (counter-rollback of part issue #620)
  . Chipmunk: removed compiler warning on chipmunk demo (issue #680)
+ . CocosLive: added sanity checks on demo (issue #681)
  . Director: removed compile warning on DisplayLink director (issue #682)
  . Sprite: anchor + offset + scale works  (issue #671)
  . SpriteFrame: removed support for flipX and flipY  (rollback of a part issue #620)
